fix modal full screen on iphone

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,13 @@
 body {
   min-width: 375px;
 }
+
+.min-full-screen {
+  min-height: 100vh; /* Fallback for non-supporting browsers */
+}
+
+@supports (min-height: 100dvh) {
+  .min-full-screen {
+    min-height: 100dvh; /* Use min-h-screen for supported browsers */
+  }
+}
